--- a/email.html
+++ b/email.html
@@ -43,10 +43,7 @@
         const user = new System("Deepu", 20, "example@gmail.com");
 
     
-        document.getElementById("demo").innerHTML =
-            "Name: " + user.name + "<br>" +
-            "Age: " + user.age + "<br>" +
-            "Email: " + user.email;
+        document.getElementById("demo").innerHTML ="Name: " + user.name + "<br>" +"Age: " + user.age + "<br>" +"Email: " + user.email;
 
     
         try {
